<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp"
    android:scrollbars="none"
    android:theme="@style/Theme.MaterialComponents.Light.NoActionBar"
    tools:context=".Activity.Login.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/registerImg"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="20dp"
            android:src="@drawable/ic_profile"
            app:civ_border_color="@color/black"
            app:civ_border_width="2dp" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="30dp"
            android:hint="@string/fist_name"
            app:boxStrokeColor="@color/White"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true"
            app:hintTextColor="@color/White">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_register_first_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPersonName"
                android:textAlignment="textStart"
                android:textColor="@color/White"
                android:textStyle="bold"
                tools:ignore="RtlSymmetry" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            android:hint="@string/last_name"
            app:boxStrokeColor="@color/White"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true"
            app:hintTextColor="@color/White">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_register_last_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPersonName"
                android:textAlignment="textStart"
                android:textColor="@color/White"
                android:textStyle="bold"
                tools:ignore="RtlSymmetry" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            android:hint="@string/phone"
            app:boxStrokeColor="@color/White"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true"
            app:hintTextColor="@color/White">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_register_phone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="phone"
                android:textAlignment="textStart"
                android:textColor="@color/White"
                android:textStyle="bold"
                tools:ignore="RtlSymmetry" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_tv_gender"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            android:hint="@string/gender"
            app:boxStrokeColor="@color/White"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true"
            app:hintTextColor="@color/White">

            <AutoCompleteTextView
                android:id="@+id/register_et_gender"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:enabled="false"
                android:inputType="textAutoComplete"
                android:paddingStart="20dp"
                android:textAlignment="textStart"
                android:textColor="@color/White"
                android:textStyle="bold"
                tools:ignore="LabelFor,RtlSymmetry" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            android:hint="@string/date_of_birth"
            app:boxStrokeColor="@color/White"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true"
            app:hintTextColor="@color/White">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_et_date_of_birth"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="datetime"
                android:textAlignment="textStart"
                android:textColor="@color/White"
                android:textStyle="bold"
                tools:ignore="RtlSymmetry" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            android:hint="@string/email"
            app:boxStrokeColor="@color/White"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true"
            app:hintTextColor="@color/White">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_register_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textEmailAddress"
                android:textAlignment="textStart"
                android:textColor="@color/White"
                android:textStyle="bold"
                tools:ignore="RtlSymmetry" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            android:hint="@string/password"
            app:boxStrokeColor="@color/White"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true"
            app:hintTextColor="@color/White"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_register_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:textAlignment="textStart"
                android:textColor="@color/White"
                android:textStyle="bold"
                tools:ignore="RtlSymmetry" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30sp"
            android:layout_marginTop="50dp"
            android:background="@color/White"
            android:text="@string/register"
            android:textColor="@color/colorPrimary" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_have_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/i_have_account_login"
            android:textColor="#fff"
            android:textSize="18sp" />


    </LinearLayout>

</androidx.core.widget.NestedScrollView>